--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,11 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <style>
+      html, body, #root, #app, #app>div {
+        height: 100%
+      }
+    </style>
     <div id="root"></div>
   </body>
 </html>
